Create guide feature
